@@ -10,4 +10,3 @@ o set comment fields for Ogg Vorbis streams as in
   http://www.xiph.org/ogg/vorbis/doc/v-comment.html
 o change config file to separate descriptions of input, streams and
   stream targets (servers, files, etc.)
-o don't refer to MSG_NOSIGNAL in TcpSocket.cpp on FreeBSD
