@@ -1,5 +1,6 @@
 DarkIce next release
 
+    o ported to FreeBSD (removed reference to MSG_NOSIGNAL in TcpSocket.cpp)
     o bug fix: maximum bitrate setting fixed for Ogg Vorbis streams
 
 20-08-2002: DarkIce 0.11 released
